--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,58 @@
 #root {
-  max-width: 1280px;
+  min-width: 300px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main-screen{
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.skyscanner-logo{
+  min-width: 170px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.menu-nav{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+  background-color: var(--color-primary);
 }
 
-.card {
-  padding: 2em;
+.menu-nav-title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px 15px;
 }
 
-.read-the-docs {
-  color: #888;
+.menu-nav-title-left{
+  color: var(--color-white);
+  font-size: large;
+}
+
+.menu-nav-pages{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+}
+
+.menu-nav-item{
+  background-color: var(--color-primary);
+  padding: 10px 25px;
+  border-radius: 50px;
+  color: var(--color-white);
+  font-size: large;
+  margin: 5px;
+  border: 1px var(--color-white) solid;
+}
+
+.menu-nav-item.selected{
+  background-color: var(--color-secondary);
+  border: none;
 }
