--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,7 @@ html, body {
   --color-secondary: #0062E3;
   --color-selected: #154679;
   --color-white: #EFF3F8;
+  --color-white-selected: #e6e6e6;
   --color-black: #252525;
   background-color: #fcfcfc;
 
