--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,8 @@
 
 .main-screen{
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  position: relative;
 }
 
 .skyscanner-logo{
@@ -18,6 +19,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 15%;
   
   background-color: var(--color-primary);
 }
@@ -73,4 +75,9 @@
 .menu-nav-item.selected{
   background-color: var(--color-secondary);
   border: none;
+}
+
+.chat-app{
+  height: 85%;
+  position: relative;
 }
