--- a/frontend/src/components/SwipeAndFlyScreen.css
+++ b/frontend/src/components/SwipeAndFlyScreen.css
@@ -25,7 +25,7 @@
     display: block;
 }
 
-.destination-info{
+.destination-info {
     position: absolute;
     top: 0;
     left: 0;
@@ -72,7 +72,7 @@
 
 .destination-details.show {
     transform: translateY(100);
-    
+
 }
 
 .destination-details h3 {
@@ -99,14 +99,14 @@
     gap: 20px;
 }
 
-.like-button,
-.dislike-button {
+.swipe-buttons button {
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 1em;
     cursor: pointer;
     border: none;
 }
+
 
 .like-button {
     background-color: #4CAF50;
@@ -116,4 +116,21 @@
 .dislike-button {
     background-color: #f44336;
     color: white;
+}
+
+.destination-card {
+    position: relative;
+    background-color: var(--color-white-selected);
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 400px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    max-height: 90%;
+    min-height: 90%;
+    user-select: none;
+    /* Evitar la selección de texto al arrastrar */
+    transition: transform 0.3s ease-out;
+    /* Transición para la animación final */
 }
