--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -32,7 +32,7 @@
 }
 
 .chat-body{
-    height: 86%;
+    height: 93%;
     width: 100%;
     border: 1px solid black;
     display: flex;
@@ -53,4 +53,11 @@
     left: 50%;
     transform: translateX(-50%);
     margin-top: 10px;
+}
+
+.secondary-button{
+    background-color: var(--color-white-selected);
+    padding: 10px;
+    border-radius: 10px;
+    margin-left: auto;
 }
